--- a/config/sync/webform.webform.contact.yml
+++ b/config/sync/webform.webform.contact.yml
@@ -22,7 +22,7 @@ id: contact
 title: Contact
 description: 'Basic email contact webform.'
 category: ''
-elements: "name:\n  '#type': textfield\n  '#title': Name\n  '#title_display': inline\n  '#maxlength': '60'\n  '#required': true\nemail:\n  '#type': email\n  '#title': 'Your Email'\n  '#title_display': inline\n  '#required': true\nsubject:\n  '#type': textfield\n  '#title': Subject\n  '#title_display': inline\n  '#required': true\n  '#test': 'Testing contact webform from [site:name]'\nmessage:\n  '#type': textarea\n  '#title': Message\n  '#title_display': inline\n  '#required': true\n  '#test': 'Please ignore this email.'\nsoem_boxes:\n  '#type': checkboxes\n  '#title': 'soem boxes'\n  '#options':\n    adsfasdf: adsfasdf\n    fsdgsg: fsdgsg\n    fgjfghjj: fgjfghjj\nddfgh:\n  '#type': radios\n  '#title': dfghdfghdg\n  '#options':\n    'xfdgsdfg dg': 'xfdgsdfg dg'\n    'sgdsg s': 'sgdsg s'\n    'dfg hfj j': 'dfg hfj j'"
+elements: "name:\n  '#type': textfield\n  '#title': Name\n  '#title_display': inline\n  '#maxlength': '60'\n  '#required': true\nemail:\n  '#type': email\n  '#title': 'Your Email'\n  '#title_display': inline\n  '#required': true\nsubject:\n  '#type': textfield\n  '#title': Subject\n  '#title_display': inline\n  '#required': true\n  '#test': 'Testing contact webform from [site:name]'\nmessage:\n  '#type': textarea\n  '#title': Message\n  '#title_display': inline\n  '#required': true\n  '#test': 'Please ignore this email.'\nselect_test:\n  '#type': select\n  '#title': 'Select Test'\n  '#options':\n    one: One\n    two: Two\n    three: Three\nchecks_test:\n  '#type': checkboxes\n  '#title': 'Checks test'\n  '#options':\n    one: one\n    two: two\n    three: three"
 css: ''
 javascript: ''
 settings:
