Separate media and document embeds

--- a/config/sync/editor.editor.basic_html.yml
+++ b/config/sync/editor.editor.basic_html.yml
@@ -38,6 +38,7 @@ settings:
           name: Media
           items:
             - media
+            - document
         -
           name: Miscellaneous
           items:
