--- a/config/sync/filter.format.basic_html.yml
+++ b/config/sync/filter.format.basic_html.yml
@@ -16,16 +16,16 @@ filters:
     id: filter_html
     provider: filter
     status: true
-    weight: -45
+    weight: -46
     settings:
-      allowed_html: '<a href hreflang class target id title><em> <strong> <cite> <blockquote cite> <code> <ul type class> <ol start type class> <li> <dl> <dt> <dd> <h2 id class> <h3 id class> <h4 id class> <h5 id class> <h6 id class> <p class> <br> <span class> <img srcset typeof src alt height width data-entity-type data-entity-uuid data-align data-caption> <u> <hr> <table> <caption> <figcaption> <picture> <source srcset media type> <tbody> <thead> <tfoot> <th> <td> <tr> <div id class data-*> <iframe src class title frameborder aria-describedby tabindex allowtransparency style width height> <drupal-entity data-*><article class data-*><small>'
+      allowed_html: '<a href hreflang class target id title><em> <strong> <cite> <blockquote cite> <code> <ul type class> <ol start type class> <li> <dl> <dt> <dd> <h2 id class> <h3 id class> <h4 id class> <h5 id class> <h6 id class> <p class> <br> <span class> <img srcset typeof src alt height width data-entity-type data-entity-uuid data-align data-caption> <u> <hr> <table> <caption> <figcaption> <picture> <source srcset media type> <tbody> <thead> <tfoot> <th> <td> <tr> <div id class data-*> <iframe src class title frameborder aria-describedby tabindex allowtransparency style width height> <drupal-entity data-* data-entity-type data-entity-uuid data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button alt title><article class data-*><small>'
       filter_html_help: false
       filter_html_nofollow: false
   filter_align:
     id: filter_align
     provider: filter
     status: true
-    weight: -49
+    weight: -50
     settings: {  }
   filter_caption:
     id: filter_caption
@@ -49,7 +49,7 @@ filters:
     id: entity_embed
     provider: entity_embed
     status: true
-    weight: -50
+    weight: -49
     settings: {  }
   filter_autop:
     id: filter_autop
@@ -61,7 +61,7 @@ filters:
     id: filter_htmlcorrector
     provider: filter
     status: true
-    weight: -44
+    weight: -45
     settings: {  }
   filter_html_escape:
     id: filter_html_escape
@@ -80,7 +80,7 @@ filters:
     id: filter_pathologic
     provider: pathologic
     status: true
-    weight: 50
+    weight: -44
     settings:
       settings_source: global
       local_settings:
