--- a/config/sync/core.entity_view_display.node.support_book.default.yml
+++ b/config/sync/core.entity_view_display.node.support_book.default.yml
@@ -54,10 +54,31 @@ third_party_settings:
                 entity: layout_builder.entity
             additional: {  }
             weight: 1
+        third_party_settings: {  }
       -
-        layout_id: two_column_sidebar
+        layout_id: two_column_sidebar_left
         layout_settings: {  }
         components:
+          1a1fb60d-635c-4fb6-8459-2db1a58899a2:
+            uuid: 1a1fb60d-635c-4fb6-8459-2db1a58899a2
+            region: first
+            configuration:
+              id: 'menu_block:support-book'
+              label: 'Web Editor Guide'
+              provider: menu_block
+              label_display: visible
+              follow: 0
+              follow_parent: child
+              level: 1
+              depth: 3
+              expand: 1
+              parent: 'support-book:'
+              label_type: block
+              label_link: 0
+              suggestion: page_menu
+              context_mapping: {  }
+            additional: {  }
+            weight: 0
           58d10ca4-4bf0-4749-8356-d869e88388e4:
             uuid: 58d10ca4-4bf0-4749-8356-d869e88388e4
             region: content
@@ -93,26 +114,7 @@ third_party_settings:
                 entity: layout_builder.entity
             additional: {  }
             weight: 1
-          1a1fb60d-635c-4fb6-8459-2db1a58899a2:
-            uuid: 1a1fb60d-635c-4fb6-8459-2db1a58899a2
-            region: sidebar
-            configuration:
-              id: 'menu_block:support-book'
-              label: 'Web Editor Guide'
-              provider: menu_block
-              label_display: visible
-              follow: 0
-              follow_parent: child
-              level: 1
-              depth: 3
-              expand: 1
-              parent: 'support-book:'
-              label_type: block
-              label_link: 0
-              suggestion: page_menu
-              context_mapping: {  }
-            additional: {  }
-            weight: 0
+        third_party_settings: {  }
     allow_custom: false
     is_enabled: true
     enabled: true
@@ -122,7 +124,6 @@ third_party_settings:
         AddToAny: {  }
         'Chaos Tools': {  }
         Content: {  }
-        core: {  }
         Flippy: {  }
         Forms: {  }
         Help: {  }
@@ -135,9 +136,11 @@ third_party_settings:
           - system_breadcrumb_block
         User: {  }
         'User fields': {  }
+        core: {  }
       allowed_layouts:
         - layout_onecol
-        - two_column_sidebar
+        - two_column_sidebar_left
+        - two_column_sidebar_right
 _core:
   default_config_hash: zs7lQwC-x3RO8F51uxAs-b0WMoO79Uls3sPCfC8Ggks
 id: node.support_book.default
@@ -168,3 +171,4 @@ content:
     third_party_settings: {  }
 hidden:
   addtoany: true
+  search_api_excerpt: true
