--- a/config/sync/core.entity_view_display.media.image.banner.yml
+++ b/config/sync/core.entity_view_display.media.image.banner.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.banner
-    - field.field.media.image.field_caption
     - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - media.type.image
@@ -35,8 +34,8 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
-  field_caption: true
   field_media_categories: true
   name: true
+  search_api_excerpt: true
   thumbnail: true
   uid: true
