--- a/config/sync/core.entity_view_display.media.image.large.yml
+++ b/config/sync/core.entity_view_display.media.image.large.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.large
-    - field.field.media.image.field_caption
     - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - media.type.image
@@ -24,14 +23,6 @@ targetEntityType: media
 bundle: image
 mode: large
 content:
-  field_caption:
-    type: string
-    weight: 1
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    region: content
   field_media_image:
     type: responsive_image
     weight: 0
@@ -46,5 +37,6 @@ hidden:
   created: true
   field_media_categories: true
   name: true
+  search_api_excerpt: true
   thumbnail: true
   uid: true
