--- a/config/sync/core.entity_view_display.media.image.medium_embed.yml
+++ b/config/sync/core.entity_view_display.media.image.medium_embed.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.medium_embed
-    - field.field.media.image.field_caption
     - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - image.style.medium_non_crop
@@ -22,14 +21,6 @@ targetEntityType: media
 bundle: image
 mode: medium_embed
 content:
-  field_caption:
-    type: string
-    weight: 1
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
   field_media_image:
     type: image
     weight: 0
@@ -43,5 +34,6 @@ hidden:
   created: true
   field_media_categories: true
   name: true
+  search_api_excerpt: true
   thumbnail: true
   uid: true
