Re-add caption field as plain long text

--- a/config/sync/core.entity_form_display.paragraph.basic_page_section.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.basic_page_section.default.yml
@@ -44,8 +44,8 @@ content:
       form_display_mode: default
       default_paragraph_type: _none
       features:
-        duplicate: duplicate
         collapse_edit_all: collapse_edit_all
+        duplicate: '0'
         add_above: '0'
     third_party_settings: {  }
     type: paragraphs
