--- a/config/sync/core.entity_form_display.media.image.background_image.yml
+++ b/config/sync/core.entity_form_display.media.image.background_image.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_form_mode.media.background_image
+    - field.field.media.image.field_caption
     - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - image.style.thumbnail
@@ -19,7 +20,7 @@ mode: background_image
 content:
   field_media_categories:
     type: options_select
-    weight: 2
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -33,16 +34,10 @@ content:
     third_party_settings: {  }
     type: image_focal_point
     region: content
-  name:
-    type: string_textfield
-    weight: 1
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    region: content
 hidden:
   created: true
+  field_caption: true
+  name: true
   path: true
   status: true
   uid: true
