--- a/config/sync/core.entity_form_display.paragraph.accordion_group.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.accordion_group.default.yml
@@ -23,10 +23,15 @@ content:
       title_plural: Paragraphs
       edit_mode: closed
       closed_mode: preview
-      autocollapse: all
+      autocollapse: none
+      closed_mode_threshold: 0
       add_mode: button
       form_display_mode: default
       default_paragraph_type: _none
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: '0'
+        add_above: '0'
     third_party_settings: {  }
     region: content
   field_widget_title:
