--- a/config/sync/core.entity_form_display.paragraph.landing_page_section.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.landing_page_section.default.yml
@@ -57,13 +57,14 @@ content:
       edit_mode: closed
       closed_mode: preview
       autocollapse: none
+      closed_mode_threshold: 0
       add_mode: button
       form_display_mode: default
       default_paragraph_type: _none
-      closed_mode_threshold: 0
       features:
-        duplicate: duplicate
         collapse_edit_all: collapse_edit_all
+        duplicate: '0'
+        add_above: '0'
     third_party_settings: {  }
     region: content
   field_style:
