--- a/config/sync/core.entity_view_display.media.image.full.yml
+++ b/config/sync/core.entity_view_display.media.image.full.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.full
+    - field.field.media.image.field_caption
     - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - media.type.image
@@ -13,7 +14,6 @@ dependencies:
     - responsive_image
 third_party_settings:
   layout_builder:
-    sections: {  }
     enabled: false
     allow_custom: false
 _core:
@@ -23,6 +23,13 @@ targetEntityType: media
 bundle: image
 mode: full
 content:
+  field_caption:
+    type: basic_string
+    weight: 1
+    region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
   field_media_image:
     type: responsive_image
     weight: 0
