--- a/config/sync/core.entity_view_display.media.image.large_embed.yml
+++ b/config/sync/core.entity_view_display.media.image.large_embed.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.large_embed
+    - field.field.media.image.field_caption
     - field.field.media.image.field_media_categories
     - field.field.media.image.field_media_image
     - image.style.large_non_crop
@@ -13,7 +14,6 @@ dependencies:
     - layout_builder
 third_party_settings:
   layout_builder:
-    sections: {  }
     allow_custom: false
     enabled: false
 id: media.image.large_embed
@@ -21,6 +21,13 @@ targetEntityType: media
 bundle: image
 mode: large_embed
 content:
+  field_caption:
+    type: basic_string
+    weight: 1
+    region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
   field_media_image:
     type: image
     weight: 0
