--- a/config/sync/core.entity_form_display.media.document.default.yml
+++ b/config/sync/core.entity_form_display.media.document.default.yml
@@ -16,7 +16,7 @@ bundle: document
 mode: default
 content:
   field_media_categories:
-    weight: 2
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -28,16 +28,9 @@ content:
     third_party_settings: {  }
     type: file_generic
     region: content
-  name:
-    type: string_textfield
-    weight: 1
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    region: content
 hidden:
   created: true
+  name: true
   path: true
   status: true
   uid: true
