--- a/config/sync/core.entity_form_display.media.video.default.yml
+++ b/config/sync/core.entity_form_display.media.video.default.yml
@@ -17,7 +17,7 @@ mode: default
 content:
   field_media_categories:
     type: options_select
-    weight: 2
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -27,16 +27,9 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
-  name:
-    type: string_textfield
-    weight: 1
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    region: content
 hidden:
   created: true
+  name: true
   path: true
   status: true
   uid: true
