--- a/config/sync/views.view.events.yml
+++ b/config/sync/views.view.events.yml
@@ -487,10 +487,10 @@ display:
             group_items: {  }
           plugin_id: datetime
       sorts:
-        field_oc_date_value:
-          id: field_oc_date_value
-          table: node__field_oc_date
-          field: field_oc_date_value
+        field_date_value:
+          id: field_date_value
+          table: node__field_date
+          field: field_date_value
           relationship: none
           group_type: group
           admin_label: ''
