Inline form errors, ui modal buttons, form widget settings

--- a/config/sync/core.entity_form_display.paragraph.form.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.form.default.yml
@@ -18,7 +18,7 @@ content:
   field_form:
     weight: 2
     settings:
-      default_data: true
+      default_data: false
     third_party_settings: {  }
     type: webform_entity_reference_select
     region: content
