--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -51,6 +51,7 @@ module:
   image: 0
   image_style_quality: 0
   inline_entity_form: 0
+  inline_form_errors: 0
   layout_builder: 0
   layout_builder_restrictions: 0
   layout_discovery: 0
