--- a/config/sync/field.field.media.image.field_media_image.yml
+++ b/config/sync/field.field.media.image.field_media_image.yml
@@ -22,7 +22,7 @@ default_value_callback: ''
 settings:
   file_directory: ''
   file_extensions: 'png gif jpg jpeg'
-  max_filesize: 5mb
+  max_filesize: '2 mb'
   max_resolution: ''
   min_resolution: ''
   alt_field: true
