--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -15,10 +15,28 @@ dependencies:
   module:
     - datetime
     - entity_browser_entity_form
+    - field_group
     - geolocation
     - inline_entity_form
     - metatag
     - text
+third_party_settings:
+  field_group:
+    group_location:
+      children:
+        - field_event_location
+        - field_event_pin_info
+      parent_name: ''
+      weight: 5
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        open: false
+        required_fields: true
+      label: Location
+      region: content
 _core:
   default_config_hash: BFvVE_TAhfYDa9zIJpis4phuabuu5iPKKQtUnfJb1sE
 id: node.event.default
@@ -36,7 +54,7 @@ content:
     third_party_settings: {  }
     region: content
   field_banner:
-    weight: 1
+    weight: 3
     settings:
       form_mode: background_image
       label_singular: ''
@@ -54,19 +72,19 @@ content:
     type: inline_entity_form_complex
     region: content
   field_category:
-    weight: 3
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_date:
-    weight: 2
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_event_location:
-    weight: 5
+    weight: 6
     settings:
       default_longitude: ''
       default_latitude: ''
@@ -101,7 +119,7 @@ content:
     type: geolocation_googlegeocoder
     region: content
   field_event_pin_info:
-    weight: 6
+    weight: 7
     settings:
       rows: 5
       placeholder: ''
@@ -109,7 +127,7 @@ content:
     type: text_textarea
     region: content
   field_metatags:
-    weight: 9
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: metatag_firehose
@@ -118,21 +136,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 7
+    weight: 6
     third_party_settings: {  }
     region: content
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 10
+    weight: 9
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 7
     third_party_settings: {  }
     region: content
   title:
