--- a/config/sync/core.entity_form_display.node.profiles.default.yml
+++ b/config/sync/core.entity_form_display.node.profiles.default.yml
@@ -14,9 +14,27 @@ dependencies:
     - node.type.profiles
   module:
     - entity_browser_entity_form
+    - field_group
     - inline_entity_form
     - telephone
     - text
+third_party_settings:
+  field_group:
+    group_contact_information:
+      children:
+        - field_email
+        - field_phone
+      parent_name: ''
+      weight: 5
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        open: false
+        required_fields: true
+      label: 'Contact Information'
+      region: content
 _core:
   default_config_hash: o_cnK3RrkmvguzzbN5aLQon8xiIF4q3HwJDCr0qe77E
 id: node.profiles.default
@@ -26,7 +44,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 6
+    weight: 4
     settings:
       rows: 9
       summary_rows: 3
@@ -34,10 +52,10 @@ content:
     third_party_settings: {  }
     region: content
   field_email:
-    weight: 4
+    weight: 5
     settings:
       size: 60
-      placeholder: ''
+      placeholder: 'Ex: email@website.com'
     third_party_settings: {  }
     type: email_default
     region: content
@@ -58,9 +76,9 @@ content:
     type: string_textfield
     region: content
   field_phone:
-    weight: 5
+    weight: 6
     settings:
-      placeholder: ''
+      placeholder: 'Ex: 555-555-5555'
     third_party_settings: {  }
     type: telephone_default
     region: content
@@ -94,7 +112,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 7
+    weight: 6
     region: content
     third_party_settings: {  }
 hidden:
