--- a/config/sync/core.entity_form_display.paragraph.basic_page_section.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.basic_page_section.default.yml
@@ -8,15 +8,32 @@ dependencies:
     - field.field.paragraph.basic_page_section.field_section_widgets
     - paragraphs.paragraphs_type.basic_page_section
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_section_extras:
+      children:
+        - field_section_intro
+      parent_name: ''
+      weight: 1
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        open: false
+        required_fields: true
+      label: 'Section Extras'
+      region: content
 id: paragraph.basic_page_section.default
 targetEntityType: paragraph
 bundle: basic_page_section
 mode: default
 content:
   field_section_intro:
-    weight: 1
+    weight: 2
     settings:
       rows: 5
       placeholder: ''
@@ -32,7 +49,7 @@ content:
     type: string_textfield
     region: content
   field_section_widgets:
-    weight: 7
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
