--- a/config/sync/core.entity_form_display.paragraph.landing_page_section.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.landing_page_section.default.yml
@@ -11,8 +11,41 @@ dependencies:
     - field.field.paragraph.landing_page_section.field_style
     - paragraphs.paragraphs_type.landing_page_section
   module:
+    - field_group
     - paragraphs
     - text
+third_party_settings:
+  field_group:
+    group_layout_styling:
+      children:
+        - field_layout
+        - field_style
+      parent_name: ''
+      weight: 4
+      format_type: details
+      format_settings:
+        description: ''
+        required_fields: true
+        id: ''
+        classes: ''
+        open: false
+      label: 'Layout & Styling'
+      region: content
+    group_section_extras:
+      children:
+        - field_section_intro
+        - field_anchor_link
+      parent_name: ''
+      weight: 1
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        open: false
+        required_fields: true
+      label: 'Section Extras'
+      region: content
 id: paragraph.landing_page_section.default
 targetEntityType: paragraph
 bundle: landing_page_section
@@ -27,13 +60,13 @@ content:
     type: string_textfield
     region: content
   field_layout:
-    weight: 4
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_section_intro:
-    weight: 1
+    weight: 2
     settings:
       rows: 5
       placeholder: ''
@@ -50,7 +83,7 @@ content:
     region: content
   field_section_widgets:
     type: paragraphs
-    weight: 6
+    weight: 5
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -68,7 +101,7 @@ content:
     third_party_settings: {  }
     region: content
   field_style:
-    weight: 5
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: options_select
