--- a/config/sync/field.field.node.event.field_event_location.yml
+++ b/config/sync/field.field.node.event.field_event_location.yml
@@ -13,8 +13,8 @@ id: node.event.field_event_location
 field_name: field_event_location
 entity_type: node
 bundle: event
-label: 'Event Location'
-description: 'Use the search box to enter your location. You may enter street addresses, or search for well-known places (such as Mt. Rushmore). <strong>NOTE:</strong> After entering a location, you may click on the map to adjust the final pin location. The pin will be moved to wherever you click. You may use the zoom tools or double click to zoom the map and you drag to pan the map.'
+label: Location
+description: 'Use the search box to enter a location. You may enter street addresses, or search for well-known places (such as Mt. Rushmore).'
 required: false
 translatable: false
 default_value: {  }
