--- a/config/sync/field.field.node.event.field_event_pin_info.yml
+++ b/config/sync/field.field.node.event.field_event_pin_info.yml
@@ -13,7 +13,7 @@ id: node.event.field_event_pin_info
 field_name: field_event_pin_info
 entity_type: node
 bundle: event
-label: 'Event Pin Info'
+label: 'Map Pin Info'
 description: 'Add the information you wish to show on the map pin.'
 required: false
 translatable: false
