--- a/config/sync/field.field.node.landing_page.field_banner.yml
+++ b/config/sync/field.field.node.landing_page.field_banner.yml
@@ -13,7 +13,7 @@ field_name: field_banner
 entity_type: node
 bundle: landing_page
 label: Banner
-description: 'Banner images should be a minimum of 1600x900px. <strong>NOTE: </strong>Banners will be cropped into different aspect ratios depending on device and screen size. Use the focal point tool (crosshairs) to ensure that they most important part of the image is preserved in all ratios.'
+description: '<strong>Optimal image size:</strong> 1600x900px'
 required: false
 translatable: true
 default_value: {  }
