--- a/config/sync/field.field.paragraph.accordion_item.field_accordion_header.yml
+++ b/config/sync/field.field.paragraph.accordion_item.field_accordion_header.yml
@@ -12,7 +12,7 @@ field_name: field_accordion_header
 entity_type: paragraph
 bundle: accordion_item
 label: 'Accordion Header'
-description: 'This is the text that will be displayed on the collapsed accordion. '
+description: ''
 required: true
 translatable: false
 default_value: {  }
