--- a/config/sync/field.field.paragraph.basic_page_section.field_section_intro.yml
+++ b/config/sync/field.field.paragraph.basic_page_section.field_section_intro.yml
@@ -12,7 +12,7 @@ field_name: field_section_intro
 entity_type: paragraph
 bundle: basic_page_section
 label: 'Section Intro'
-description: 'Add some introductory text for this section.'
+description: ''
 required: false
 translatable: false
 default_value: {  }
