--- a/config/sync/field.field.paragraph.gallery.field_image_multi.yml
+++ b/config/sync/field.field.paragraph.gallery.field_image_multi.yml
@@ -11,7 +11,7 @@ field_name: field_image_multi
 entity_type: paragraph
 bundle: gallery
 label: Images
-description: "Upload a new image or add an existing image from the media library. \r\n<br>\r\n<strong>If this will be a lightbox gallery:</strong> The image will be cropped into a thumbnail until it is opened in the lightbox. Use the focal point tool (crosshairs) to ensure that most important part of the image will be preserved in the crop area. Optimal image width is 800px<br>\r\n<strong>If this will be a slider gallery:</strong> Optimal image width should be 1200px."
+description: "<strong>If this will be a lightbox gallery:</strong> Optimal image width is 800px<br>\r\n<strong>If this will be a slider gallery:</strong> Optimal image width is 1200px."
 required: true
 translatable: false
 default_value: {  }
