--- a/config/sync/field.field.paragraph.image.field_image_size.yml
+++ b/config/sync/field.field.paragraph.image.field_image_size.yml
@@ -12,7 +12,7 @@ field_name: field_image_size
 entity_type: paragraph
 bundle: image
 label: 'Image Size'
-description: "Choose the size for this image.  </br>\r\n<strong>Original:</strong> No size set </br>\r\n<strong>Small:</strong> 300px (chosen image should be 600px wide for retina purposes) </br>\r\n<strong>Medium:</strong> 500px (chosen image should be 1000px wide for retina purposes) </br>\r\n<strong>Large:</strong> 800px (chosen image should be 1000px wide for retina purposes) </br>\r\n<strong>Full:</strong> Full width of parent column (chosen image should be 1200px wide)"
+description: "Choose the size for this image.  </br>\r\n<strong>Original:</strong> No size set </br>\r\n<strong>Small:</strong> Optimal image size is 600px </br>\r\n<strong>Medium:</strong> Optimal image size is 1000px </br>\r\n<strong>Large:</strong> Optimal image size is 1000px </br>\r\n<strong>Full:</strong> Optimal image size is 1200px"
 required: true
 translatable: false
 default_value:
