--- a/config/sync/field.field.paragraph.pullquote.field_widget_title.yml
+++ b/config/sync/field.field.paragraph.pullquote.field_widget_title.yml
@@ -12,7 +12,7 @@ field_name: field_widget_title
 entity_type: paragraph
 bundle: pullquote
 label: 'Widget Title'
-description: 'This field will be displayed above the widget in H2 format.'
+description: ''
 required: false
 translatable: true
 default_value: {  }
