--- a/config/sync/field.field.node.blog.field_author.yml
+++ b/config/sync/field.field.node.blog.field_author.yml
@@ -13,7 +13,7 @@ field_name: field_author
 entity_type: node
 bundle: blog
 label: Author
-description: 'Add the author for this post. <strong>NOTE:</strong> If you do not see the author you wish to select in the list, you must add them as a published profile node <a href="/node/add/profiles">here</a>.'
+description: 'Authors may be added <a href="/node/add/profiles">here</a>. Save your changes to this page first.'
 required: true
 translatable: false
 default_value: {  }
