--- a/config/sync/field.field.node.news.field_category.yml
+++ b/config/sync/field.field.node.news.field_category.yml
@@ -13,7 +13,7 @@ field_name: field_category
 entity_type: node
 bundle: news
 label: Category
-description: ''
+description: 'Categories may be added or edited <a href="/admin/structure/taxonomy/manage/categories/overview">here</a>. Save your changes to this page first.'
 required: false
 translatable: true
 default_value: {  }
