--- a/config/sync/structure_sync.data.yml
+++ b/config/sync/structure_sync.data.yml
@@ -176,6 +176,6 @@ blocks:
     rev_id_current: null
     fields:
       body:
-        value: "<p>© 2019 Electric Citizen, All Tacos&nbsp;Spoken For</p>\r\n"
+        value: "<p>Electric Citizen, All Tacos&nbsp;Spoken For</p>\r\n"
         summary: ''
         format: basic_html
