Readd social media block config

--- a/config/sync/block.block.citizen_patterns_aboutsomestuff.yml
+++ b/config/sync/block.block.citizen_patterns_aboutsomestuff.yml
@@ -10,8 +10,8 @@ dependencies:
     - citizen_patterns
 id: citizen_patterns_aboutsomestuff
 theme: citizen_patterns
-region: footer
-weight: -6
+region: prefooter
+weight: -5
 provider: null
 plugin: 'block_content:776b5982-01ea-4b37-acde-8e3f751d0c95'
 settings:
