--- a/config/sync/core.entity_form_display.paragraph.landing_page_section.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.landing_page_section.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.landing_page_section.field_anchor_link
+    - field.field.paragraph.landing_page_section.field_layout
     - field.field.paragraph.landing_page_section.field_section_intro
     - field.field.paragraph.landing_page_section.field_section_title
     - field.field.paragraph.landing_page_section.field_section_widgets
@@ -58,6 +59,12 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_layout:
+    weight: 6
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_section_intro:
     weight: 2
     settings:
@@ -94,7 +101,7 @@ content:
     third_party_settings: {  }
     region: content
   field_style:
-    weight: 4
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: options_select
