--- a/config/sync/core.entity_view_display.paragraph.landing_page_section.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.landing_page_section.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.landing_page_section.field_anchor_link
+    - field.field.paragraph.landing_page_section.field_layout
     - field.field.paragraph.landing_page_section.field_section_intro
     - field.field.paragraph.landing_page_section.field_section_title
     - field.field.paragraph.landing_page_section.field_section_widgets
@@ -48,5 +49,6 @@ content:
     region: content
 hidden:
   field_anchor_link: true
+  field_layout: true
   field_style: true
   search_api_excerpt: true
