--- a/config/sync/core.entity_view_display.paragraph.landing_page_section.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.landing_page_section.preview.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
     - field.field.paragraph.landing_page_section.field_anchor_link
+    - field.field.paragraph.landing_page_section.field_layout
     - field.field.paragraph.landing_page_section.field_section_intro
     - field.field.paragraph.landing_page_section.field_section_title
     - field.field.paragraph.landing_page_section.field_section_widgets
@@ -13,6 +14,7 @@ dependencies:
   module:
     - entity_reference_revisions
     - layout_builder
+    - options
 third_party_settings:
   layout_builder:
     enabled: false
@@ -22,6 +24,13 @@ targetEntityType: paragraph
 bundle: landing_page_section
 mode: preview
 content:
+  field_layout:
+    type: list_default
+    weight: 0
+    region: content
+    label: inline
+    settings: {  }
+    third_party_settings: {  }
   field_section_widgets:
     type: entity_reference_revisions_entity_view
     weight: 2
