Restructure form elements, built pl fitler example

--- a/web/themes/citizen_patterns/components/_patterns/01-parts/03-buttons/buttons.yml
+++ b/web/themes/citizen_patterns/components/_patterns/01-parts/03-buttons/buttons.yml
@@ -17,6 +17,11 @@ formButtons:
       'Submit'
   2:
     class:
-      button-warning
+      button-caution
+    text:
+      'Cancel'
+  3:
+    class:
+      button-danger-robinson
     text:
       'Reset'
