Newsletter and social media blocks

--- a/web/themes/citizen_patterns/components/_patterns/03-composites/04-layout/02-footer/site-footer.yml
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/04-layout/02-footer/site-footer.yml
@@ -7,6 +7,7 @@ about: |
 copyright:
   "Electric Citizen LLC, All Rights Reserved."
 
+# if changed, these values should also be updated in the pl-newsletter.yml file
 newsletter:
   plLabel:
     "Stay in Touch in Pattern lab"
