Update iamge sizes, remove wysiwyg quote

--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/08-pullquote/pullquote.yml
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/08-pullquote/pullquote.yml
@@ -1,11 +1,10 @@
-widget_title:
-  "Pullquote"
+type:
+  pullquote
+widgetTitle:
+  'Quotes with optional source'
 
-quote:
-  "Quis Aristidem non mortuum diligit? Nummus in Croesi divitiis obscuratur, pars est tamen."
+quote: |
+  <p>Quis Aristidem non mortuum diligit? Nummus in Croesi divitiis obscuratur, pars est tamen.</p>
 source:
-  "Some Guy"
-
-quote_instructions:
-  "DRUPAL: This template is embedded into the Drupal pullquote paragraph template."
+  "Sum One"
 
