Readd pull quote as plain text, update quote and text widgets in PL

--- a/config/sync/core.entity_view_display.paragraph.pullquote.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.pullquote.preview.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.paragraph.preview
+    - field.field.paragraph.pullquote.field_quote
     - field.field.paragraph.pullquote.field_source
     - field.field.paragraph.pullquote.field_widget_title
     - paragraphs.paragraphs_type.pullquote
@@ -19,7 +20,14 @@ id: paragraph.pullquote.preview
 targetEntityType: paragraph
 bundle: pullquote
 mode: preview
-content: {  }
+content:
+  field_quote:
+    type: basic_string
+    weight: 0
+    region: content
+    label: inline
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   field_source: true
   field_widget_title: true
