--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/09-text/text.yml
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/09-text/text.yml
@@ -1,20 +1,8 @@
-widget_title:
-  "Text Widget w/ Two Column Option"
+type:
+  pullquote
+widgetTitle:
+  'Block of WYSIWYG text'
 
-#to add backgrounds, use either text_back_image or text_back color. Allowed colors are orange, blue, grey
-#additional colors must be added in the drupal background style field.
-text_back_color:
-
-text_back_img:
-  http://placeimg.com/1600/800/nature
-
-
-text:
-  "Quae cum praeponunt, ut sit aliqua rerum selectio, naturam videntur sequi; Quis Aristidem non mortuum diligit? Nummus in Croesi divitiis obscuratur, pars est tamen divitiarum. Nec vero sum nescius esse utilitatem in historia, non modo voluptatem."
-text_two:
-  "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quamquam ab iis philosophiam et omnes ingenuas disciplinas habemus; Ut id aliis narrare gestiant? Tum Piso: Quoniam igitur aliquid omnes, quid Lucius noster?"
-
-
-text_instructions:
-  "DRUPAL: This template is embedded into the Drupal text paragraph template."
+text: |
+  <p>Quis hoc dicit? <strong>Atque etiam valítudinem</strong>, vires, vacuitatem doloris non propter utilitatem solum, sed etiam ipsas propter se expetemus. <em>Cum autem in quo sapienter dicimus</em>, id a primo rectissime dicitur.</p><p>Praeteritis, inquit, gaudeo. An hoc usque quaque, aliter in vita? Tubulo putas dicere? <a href="#">Itaque haec cum illis</a> est dissensio, cum Peripateticis nulla sane. Tu quidem reddes; Istam voluptatem, inquit, Epicurus ignorat? At modo dixeras nihil in istis rebus esse, quod interesset.</p>
 
