--- a/config/sync/core.entity_form_display.paragraph.pullquote.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.pullquote.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.pullquote.field_quote
     - field.field.paragraph.pullquote.field_source
     - field.field.paragraph.pullquote.field_widget_title
     - paragraphs.paragraphs_type.pullquote
@@ -13,8 +14,16 @@ targetEntityType: paragraph
 bundle: pullquote
 mode: default
 content:
+  field_quote:
+    weight: 1
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
+    region: content
   field_source:
-    weight: 3
+    weight: 2
     settings:
       size: 60
       placeholder: ''
