--- a/config/sync/core.entity_view_display.paragraph.pullquote.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.pullquote.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.pullquote.field_quote
     - field.field.paragraph.pullquote.field_source
     - field.field.paragraph.pullquote.field_widget_title
     - paragraphs.paragraphs_type.pullquote
@@ -10,7 +11,6 @@ dependencies:
     - layout_builder
 third_party_settings:
   layout_builder:
-    sections: {  }
     enabled: false
     allow_custom: false
 _core:
@@ -20,6 +20,13 @@ targetEntityType: paragraph
 bundle: pullquote
 mode: default
 content:
+  field_quote:
+    weight: 1
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
+    region: content
   field_source:
     weight: 2
     label: hidden
